gcl (2.6.1-12) unstable; urgency=low

  * Restore mpz_to_mpz{1} in gmp_big.c, can be written by compiler
  * tk8.4 patches

 -- Camm Maguire <camm@enhanced.com>  Fri, 26 Sep 2003 13:47:42 +0000

gcl (2.6.1-11) unstable; urgency=low

  * Add compilation step of compiling all lsp and cmpnew .lsp files from
    an interpreted only saved_pre_gcl before the creation of saved_gcl -
    - this enables us to use full optimization on these files while
    getting the STREF constants right on 32bit and 64bit
  * remove 'attic' from comment in gcl_loop.lsp
  * configure changes for sizeof(struct contblock) detection

 -- Camm Maguire <camm@enhanced.com>  Wed, 24 Sep 2003 16:09:44 +0000

gcl (2.6.1-10) unstable; urgency=low

  * Mac OSX GET_FULL_PATH_SELF
  * Preliminary subtypep checking for 'satisfies
  * preliminary 'satisfies support in subtypep, more predicate type
    pairs and reverse checking
  * small compiler change to remove unused C variables from optimized
    compiled macros
  * Optional compiler init file is called gcl_cmpinit
  * fasdmacros.lsp -> gcl_fasdmacros.lsp
  * All cmpinit.lsp files named gcl_cmpinit.lsp; allow full lisp
    optimization in all directories
  * collectfn -> gcl_collectfn in lsp/gcl_auto.lsp
  * collectfn -> gcl_collectfn in cmpnew/gcl_make-fn.lsp
  * Make sure makefiles can generate sys-proclaim.lsp, regenerate these
    files and recompile from lsp
  * Rebuild with opts enabled
  * Iterate sys-proclaim/rebuild generation once more
  * Iterate sys-proclaim/rebuild for pcl and clcs

 -- Camm Maguire <camm@enhanced.com>  Tue, 23 Sep 2003 19:33:27 +0000

gcl (2.6.1-9) unstable; urgency=low

  * Close streams in fasldlsym.c

 -- Camm Maguire <camm@enhanced.com>  Tue, 16 Sep 2003 14:57:20 +0000

gcl (2.6.1-8) unstable; urgency=low

  * Add processor flag variable to flags in configure.in
  * Autoadd full path to kcl_self to enable save-system when user moves
    executable and calls without script wrapper