@@ -2,8 +2,10 @@ gcl (2.6.1-12) unstable; urgency=low
 
   * Restore mpz_to_mpz{1} in gmp_big.c, can be written by compiler
   * tk8.4 patches
+  * Prevent destructive modification of bignum arguments in log_op/mp_op
+    in gmp_big.c
 
- -- Camm Maguire <camm@enhanced.com>  Fri, 26 Sep 2003 13:47:42 +0000
+ -- Camm Maguire <camm@intech.m.enhanced.com>  Sat, 27 Sep 2003 16:11:03 +0000
 
 gcl (2.6.1-11) unstable; urgency=low
 
